--- a/index.html
+++ b/index.html
@@ -6,31 +6,53 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="drop.0.1.js"></script>
   <style type="text/css">
-    ul.dropDown > li
-    {
-      padding: 10px;
+    ul.dropDown li {
+      font-family: "Helvetica Neue";
     }
 
-    ul.dropDown li.odd
-    {
+    ul.dropDown > li {
+      padding: 10px;
+      background-image: -webkit-linear-gradient(top, #08C, #05C);
+      background-image: -moz-linear-gradient(top, #08C, #05C);
+      background-image: -o-linear-gradient(top, #08C, #05C);
+      background-image: linear-gradient(top, #08C, #05C);
+      background-image: -ms-linear-gradient(top, #08C, #05C);
+      background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#08C), to(#05C));
+      border-right: thin #05C solid;
+    }
+
+    ul.dropDown > li:last-child {
+      border-right: none;
+    }
+
+    ul.dropDown a {
+      text-decoration: none;
+      color: white;
+    }
+
+    ul.dropDown li.odd {
       background-color: gray;
     }
 
-    ul.dropDown li.even
-    {
+    ul.dropDown li.even {
       background-color: lightgray;
     }
 
-    ul.dropDown > li:first-child
-    {
+    ul.dropDown > li:first-child {
       border-top-left-radius: 5px;
       border-bottom-left-radius: 5px;
     }
 
-    ul.dropDown > li:last-child
-    {
+    ul.dropDown > li:last-child {
       border-top-right-radius: 5px;
       border-bottom-right-radius: 5px;
+    }
+
+    div.radius {
+      width: 100px;
+      height: 100px;
+      margin: 0 auto;
+      background-color: gray;
     }
 
   </style>
